.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/Early_Morning_Shift_Allowance_Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>Early_Morning_Shift_Allowance_Pay_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Early Morning Shift Allowance Pay Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Pay_Code__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Allowance</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Pay_Code__c</referenceTo>
    <relationshipLabel>Interpretation Rules (Early Morning Shift Allowance Pay Code)</relationshipLabel>
    <relationshipName>Interpretation_Rules_Morning_Shift</relationshipName>
    <type>Lookup</type>
</CustomField>