.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/Night_Shift_Allowance_Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>Night_Shift_Allowance_Pay_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Night Shift Allowance Pay Code</label>
    <referenceTo>tc9_pr__Pay_Code__c</referenceTo>
    <relationshipLabel>Interpretation Rules (Night Shift Allowance Pay Code)</relationshipLabel>
    <relationshipName>Interpretation_Rules_Nigh_Shift</relationshipName>
    <type>Lookup</type>
</CustomField>