.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/Night_Shift_Allowance_Required__c.field-meta.xml
<CustomField>
    <fullName>Night_Shift_Allowance_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Night Shift Allowance Required</label>
    <type>Checkbox</type>
</CustomField>